# Detkit-NCNN-3ds

./: .gitignore  CMakeLists.txt  DevkitArm3DS.cmake  Makefile  README.md  _clang-format
cmake/: DevkitArm3DS.cmake  Tools3DS.cmake
romfs/config/: fastestdet.json  nanodet-plus-m_416_int8.json
romfs/models/: FastestDet.param  nanodet-plus-m_416-int8.json  nanodet-plus-m_416-int8.param  nanodet-plus-m_416_int8.param
src/: detector.cpp  detector.h  fastestdet.cpp  fastestdet.h  main.cpp  nanodet.cpp  nanodet.h  vision.cpp  vision.h
